@@ -51,6 +51,9 @@ Extension modules
 
 Library
 
+- tkFileDialog exposes a Directory class and askdirectory 
+  convenience function.
+
 - Symbolic group names in regular expressions must be unique.  For
   example, the regexp r'(?P<abc>)(?P<abc>)' is not allowed, because a
   single name can't mean both "group 1" and "group 2" simultaneously.
